--- a/package.json
+++ b/package.json
@@ -8,12 +8,35 @@
     "start": "next start"
   },
   "dependencies": {
+    "@formatjs/intl-relativetimeformat": "^5.2.2",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.10.0",
+    "@tanem/svg-injector": "^8.0.52",
+    "apexcharts": "^3.19.2",
+    "clipboard-copy": "^3.1.0",
+    "formatjs": "^0.1.1",
+    "formik": "^2.1.4",
     "next": "9.4.4",
+    "perfect-scrollbar": "^1.5.0",
     "react": "16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-datepicker": "^2.16.0",
     "react-dom": "16.13.1",
+    "react-inlinesvg": "^1.2.0",
+    "react-intl": "^4.6.4",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-portal": "^4.2.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-syntax-highlighter": "^12.2.1",
+    "redux": "^4.0.5",
     "semantic-ui-react": "^0.88.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2"
   }
 }
