--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-bootstrap-table2-paginator": "^2.1.2",
     "react-datepicker": "^2.16.0",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "react-inlinesvg": "^1.2.0",
     "react-intl": "^4.6.4",
+    "react-notification-badge": "^1.5.1",
     "react-perfect-scrollbar": "^1.5.8",
     "react-portal": "^4.2.1",
     "react-redux": "^7.2.0",
