--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^12.2.1",
     "redux": "^4.0.5",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "webfontloader": "^1.6.28",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
