--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy-production":"react-scripts build && scp -r ./build/* user@server_ip_address:/var/www.example.com/html",
   },
   "dependencies": {
     "@formatjs/intl-relativetimeformat": "^5.2.2",
