--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy-production":"react-scripts build && scp -r ./build/* ismail@167.99.178.141:my-app/my-app/public",
+    "deploy-production":"react-scripts build && scp -r ./build/* ismail@167.99.178.141:my-app/my-app/pages",
   },
   "dependencies": {
     "@formatjs/intl-relativetimeformat": "^5.2.2",
